i just changed the name

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Arbab Boss</h1>
+      <h1>Arbab usman</h1>
       <p>I'm <span class="typed" data-typed-items="Cricketer, Developer, Freelancer,Boss"></span></p>
     </div>
   </section><!-- End Hero -->
