--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Arbab Usman</h4>
-              <p><em>I am web developer</em></p>
+              <p><em>I am a Buisness Man</em></p>
               <ul>
                 <li>Pakistan Karachi</li>
                 <li>+923301253214</li>
